optimize sketch api
